# aries-renderer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
src/: CMakeLists.txt
src/ars/: CMakeLists.txt
src/ars/apps/: CMakeLists.txt
src/ars/apps/editor/: CMakeLists.txt  Entity.cpp  Entity.h  FileBrowser.cpp  FileBrowser.h  Main.cpp  SaveAsModal.cpp  SaveAsModal.h  Scene3DView.cpp  Scene3DView.h
src/ars/apps/importer/: CMakeLists.txt  Main.cpp
src/ars/apps/launcher/: CMakeLists.txt
src/ars/apps/playground/: CMakeLists.txt  Hierarchy.cpp  Lua.cpp  Profiler.cpp  Render.cpp
src/ars/runtime/: CMakeLists.txt
src/ars/runtime/core/: CMakeLists.txt  Core.cpp  Core.h  Log.cpp  Log.h  Profiler.cpp  Profiler.h  Reflect.cpp  Reflect.h  Res.cpp  Res.h  ResData.cpp  ResData.h  Serde.cpp  Serde.h
src/ars/runtime/core/gui/: CMakeLists.txt  ImGui.cpp  ImGui.h
src/ars/runtime/core/input/: CMakeLists.txt  Keyboard.h  Mouse.h
src/ars/runtime/core/math/: AABB.h  CMakeLists.txt  Transform.h
src/ars/runtime/core/misc/: CMakeLists.txt  Defer.h  Macro.h  NoCopyMove.h  SmallVec.h  SoA.cpp  SoA.h  Span.h  Visitor.h
src/ars/runtime/core/scene/: CMakeLists.txt  Entity.Editor.cpp  Entity.Editor.h  Entity.cpp  Entity.h  Node.h
src/ars/runtime/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Entity.Editor.cpp  Entity.Editor.h  Entity.cpp  Entity.h  ResRef.cpp  ResRef.h  Spawn.cpp  Spawn.h
src/ars/runtime/engine/components/: CMakeLists.txt  Components.cpp  Components.h  RenderSystem.cpp  RenderSystem.h
src/ars/runtime/engine/gui/: CMakeLists.txt  ImGui.cpp  ImGui.h
src/ars/runtime/physics/: CMakeLists.txt  World.cpp  World.h
src/ars/runtime/render/: CMakeLists.txt  Common.cpp  Common.h  IBuffer.h  IContext.cpp  IContext.h  IEffect.cpp  IEffect.h  IEnvironment.cpp  IEnvironment.h  IMaterial.cpp  IMaterial.h  IMesh.cpp  IMesh.h  IRenderContext.cpp  IRenderContext.h  IScene.cpp  IScene.h  ISwapchain.cpp  ISwapchain.h  ITexture.cpp  ITexture.h  IWindow.cpp  IWindow.h
src/ars/runtime/render/components/: CMakeLists.txt  RenderSystemComponent.cpp  RenderSystemComponent.h
src/ars/runtime/render/res/: CMakeLists.txt  Gltf.cpp  Gltf.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Texture.cpp  Texture.h
src/ars/runtime/render/vk/: Bindless.cpp  Bindless.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Context.cpp  Context.h  Descriptor.cpp  Descriptor.h  Effect.cpp  Effect.h  Environment.cpp  Environment.h  ImGui.cpp  ImGui.h  Lut.cpp  Lut.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Pipeline.cpp  Pipeline.h  Profiler.cpp  Profiler.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderTarget.cpp  RenderTarget.h  Scene.cpp  Scene.h  ShaderLib.cpp  Sky.cpp  Sky.h  Swapchain.cpp  Swapchain.h  Texture.cpp  Texture.h  (+18 more)
src/ars/runtime/render/vk/features/: CMakeLists.txt  DeferredShading.cpp  DeferredShading.h  Drawer.cpp  Drawer.h  OpaqueDeferred.cpp  OpaqueDeferred.h  OpaqueGeometry.cpp  OpaqueGeometry.h  OverlayRenderer.cpp  OverlayRenderer.h  QuerySelection.cpp  QuerySelection.h  RayTracing.cpp  RayTracing.h  Renderer.cpp  Renderer.h  ScreenSpaceReflection.cpp  ScreenSpaceReflection.h  Shadow.cpp  Shadow.h  ToneMapping.cpp  ToneMapping.h
src/ars/runtime/render/vk/materials/: CMakeLists.txt  MaterialTemplate.cpp  MaterialTemplate.h  MetallicRoughnessPBR.cpp  MetallicRoughnessPBR.h  Unlit.cpp  Unlit.h
src/ars/runtime/script/: CMakeLists.txt  IScriptContext.h
src/ars/runtime/script/lua/: CMakeLists.txt  LuaContext.cpp  LuaContext.h
src/ars/shaders/: AddInplace.comp  BRDFLut.comp  BaseColor.frag  BaseColor.vert  Billboard.vert  BillboardObjectId.frag  Blit.frag  Blit.vert  CMakeLists.txt  CaptureHDRToCubeMap.comp  GeometryPass.frag  GeometryPass.vert  ImGui.frag  ImGui.vert  ObjectId.frag  ObjectId.vert  ObjectIdInput.glsl  Outline.comp  PrefilterCubeMap.comp  ShadingPass.comp  ToneMapping.comp  VertexColor.frag  VertexColor.vert  frill.json  model_vis.vert  test.frag  test.vert  tex.frag  tex.vert
src/ars/shaders/Atmosphere/: AerialPerspectiveLut.comp  ApplyAerialPerspective.comp  AtmosphereCommon.glsl  MultiScatteringLut.comp  PhysicalSkyPanorama.comp  SkyView.comp  SkyViewLut.comp  TransmittanceLut.comp  frill.json
src/ars/shaders/Draw/: Depth.glsl  Depth.vert  DepthID.glsl  Draw.glsl  Material.glsl  MaterialAPI.glsl  MetallicRoughnessPBR.glsl  Uber.glsl  UberPass.glsl  frill.json
src/ars/shaders/IBL/: CaptureHDRToCubeMap.comp  PrefilterCubeMap.comp  frill.json
src/ars/shaders/SSR/: BilateralFilter.comp  HiZTraceRay.comp  InitHiZ.comp  PropagateHiZ.comp  ResolveReflection.comp  SSRCommon.glsl  ScreenSpaceReflection.comp  TemporalFilter.comp  TemporalFiltering.comp  frill.json
src/ars/shaders/Shading/: Background.comp  BackgroundPanorama.comp  BackgroundSky.comp  ShadeMaterial.comp  ShadeMaterial.frag  frill.json
src/ars/shaders/builtin/: attributes.glsl  descriptors.glsl
src/ars/shaders/include/: GBuffer.glsl  Light.glsl  MetallicRoughnessPBR.glsl  Misc.glsl  Sampling.glsl  ShadingModel.glsl  Transform.glsl  Volume.glsl
